Fixes photos on recap on mobile

--- a/_scss/layout/_recap.scss
+++ b/_scss/layout/_recap.scss
@@ -145,6 +145,7 @@
 
   .photo {
     flex: 1 0 auto;
+    max-width: 100%;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 101% 101%;
